--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
                     <span class="text-dark">a</span>
                     <span class="text-info fw-bolder">i</span>
                     <span class="text-dark">n :</span>
-                    <span class="text-info text fw-bold" id="Domain">https://api-toys.cyclic.app</span>
+                    <span class="text-info text fw-bold" id="Domain">https://toys-project-i38h.onrender.com</span>
                     <button class="btn mx-2 copyBtn" id="domainbtn"><i class="bi bi-files"></i></button>
                 </h4>
 
@@ -129,7 +129,7 @@ lastName: Gerlitz
 } </pre>
                         </td>
                         <td>Add a new user to the data base ,<a class="text-decoration-none"
-                                href="https://github.com/MaorgD/ToysProject/blob/main/api/validation/userValidation.js">if
+                                href="https://github.com/RikiGerlitz/ToysProject/blob/master/api/models/userModel.js">if
                                 you want to see the template of valid user.</a></td>
                     </tr>
                     <tr>
@@ -144,7 +144,7 @@ lastName: Gerlitz
                         </td>
                         <td>User login, if the email and password are correct the server will respond with a token,<br>
                             <a class="text-decoration-none"
-                                href="https://github.com/MaorgD/ToysProject/blob/main/api/validation/userValidation.js">if
+                                href="https://github.com/RikiGerlitz/ToysProject/blob/master/api/models/userModel.js">if
                                 you want to see the template of valid user.</a>
                         </td>
                     </tr>
@@ -222,7 +222,7 @@ lastName: Gerlitz
                     <span class="text-dark">a</span>
                     <span class="text-info fw-bolder">i</span>
                     <span class="text-dark">n :</span>
-                    <span class="text-info text fw-bold" id="Domain">https://api-toys.cyclic.app</span>
+                    <span class="text-info text fw-bold" id="Domain">https://toys-project-i38h.onrender.com</span>
                     <button class="btn mx-2 copyBtn" id="domainbtn2"><i class="bi bi-files"></i></button>
                 </h4>
                 <thead class="table-dark">
