--- a/public/index.html
+++ b/public/index.html
@@ -152,8 +152,7 @@ lastName: Gerlitz
                         <td>DELETE</td>
                         <td>/users/{idDel}</td>
                         <td></td>
-                        <td>Delete a user from the data base. <strong> Admin token can delete every user , and user can
-                                delete only himself.</strong>
+                        <td>Delete a user from the data base. <strong> Admin token can delete every user.</strong>
                         </td>
                     </tr>
                     <tr>
@@ -236,13 +235,13 @@ lastName: Gerlitz
                 <tbody>
                     <tr>
                         <td>GET</td>
-                        <td><a href="https://api-toys.cyclic.app//toys">/toys</a></td>
+                        <td><a href="https://toys-project-i38h.onrender.com/toys">/toys</a></td>
                         <td class="text-center">none</td>
                         <td>Get a list of all the toys, will present 10 results per page.</td>
                     </tr>
                     <tr>
                         <td>GET</td>
-                        <td><a href="https://api-toys.cyclic.app/toys/search?s=doll">/toys/search?s=doll</a></td>
+                        <td><a href="https://toys-project-i38h.onrender.com/toys/search?s=Risk">/toys/search?s=Risk</a></td>
                         <td class="text-center">none</td>
                         <td>search for a toy by searching follwing name or info after the "s=", it will present 10
                             results per page.
@@ -251,14 +250,14 @@ lastName: Gerlitz
                     <tr>
                         <td>GET</td>
                         <td><a
-                                href="https://api-toys.cyclic.app/toys/prices?min=50&max=200">/toys/prices?min=50&max=200</a>
+                                href="https://toys-project-i38h.onrender.com/toys/prices?min=50&max=200">/toys/prices?min=50&max=200</a>
                         </td>
                         <td class="text-center">none</td>
                         <td>Get a list of the toys by min & max , it will present 10 results per page.</td>
                     </tr>
                     <tr>
                         <td>GET</td>
-                        <td><a href="https://api-toys.cyclic.app/toys/category/doll">/toys/category/:catName</a></td>
+                        <td><a href="https://toys-project-i38h.onrender.com/toys/category/Board Games">/toys/category/:catName</a></td>
                         <td class="text-center">none</td>
                         <td>Get a list of all the toys in toys <strong>category</strong>, it will present 10 results per
                             page.</td>
@@ -282,7 +281,7 @@ lastName: Gerlitz
                         </td>
                         <td>Add a new toy to the data base, <strong>You need a token for this query ,</strong><br>
                             <a class="text-decoration-none"
-                                href="https://github.com/MaorgD/ToysProject/blob/main/api/validation/toyValidation.js">if
+                                href="https://github.com/RikiGerlitz/ToysProject/blob/master/api/models/toyModel.js">if
                                 you want to see the template of valid toy</a>
                         </td>
                     </tr>
@@ -331,7 +330,7 @@ lastName: Gerlitz
                 </a></li>
             <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i>
                 </a></li>
-            <li class="ms-3"><a class="text-muted" href="https://github.com/MaorgD/ToysProject "><i
+            <li class="ms-3"><a class="text-muted" href="https://github.com/RikiGerlitz/ToysProject"><i
                         class="bi bi-github"></i>
                 </a></li>
         </ul>
