--- a/public/index.html
+++ b/public/index.html
@@ -263,6 +263,13 @@ lastName: Gerlitz
                             page.</td>
                     </tr>
                     <tr>
+                      <td>GET</td>
+                      <td><a href="https://toys-project-i38h.onrender.com/toys/656c4ab68a93bbc517e6b0c9">/toys/{id}</a></td>
+                      <td>/toys/{id}</td>
+                      <td class="text-center">none</td>
+                      <td>Get a toy by id.</td>
+                  </tr>
+                    <tr>
                         <td>POST</td>
                         <td>/toys</td>
                         <td>
