--- a/public/index.html
+++ b/public/index.html
@@ -104,13 +104,13 @@
                 <tbody>
                     <tr>
                         <td>GET</td>
-                        <td><a href="/users/myInfo">/users/myInfo</a></td>
+                        <td><a href="https://toys-project-i38h.onrender.com/users/myInfo">/users/myInfo</a></td>
                         <td class="text-center">none</td>
                         <td>Get your own info - by token.</td>
                     </tr>
                     <tr>
                         <td>GET</td>
-                        <td><a href="/users/usersList">/users/usersList</a></td>
+                        <td><a href="https://toys-project-i38h.onrender.com/users/usersList">/users/usersList</a></td>
                         <td class="text-center">none</td>
                         <td>Get list of all users - by token admin.</td>
                     </tr>
